# ario-coverflow

./: Makefile.am  PKGBUILD  SConstruct  ario-coverflow-plugin.c  ario-coverflow-plugin.h  ario-coverflow.c  ario-coverflow.h  coverflow.ario-plugin.desktop.in  shader.frag  shader.vert
